# axum_test

./: .env  Cargo.toml
src/: main.rs
src/handlers/: mod.rs
src/handlers/database/: mod.rs
src/handlers/default/: mod.rs
src/handlers/users/: mod.rs
src/models/entities/: mod.rs
src/models/structs/: mod.rs
