[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-native-tls", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
http = "0.2.1"
